--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,8 @@
     "name": "RBC Case Competition",
     "version": "1.0",
     "description": "Build an Extension!",
-    "manifest_version": 2
+    "manifest_version": 2,
+    "browser_action": {
+        "default_popup": "popup.html"
+      }
   }
