dynamic object scoring to carts added

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     },
     "background": {
         "scripts": [
-            "popup.js",
+            "popup.js"
         ]
     },
     "content_scripts": [
