latest update for semi fina;s

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "RBC Case Competition",
+    "name": "alterEco",
     "version": "1.0",
     "description": "Build an Extension!",
     "permissions": [
@@ -28,7 +28,7 @@
                 "http://*/*",
                 "https://*/*"
             ],
-            "css": ["bootstrap.min.css"],
+            "css": ["bootstrap.min.css", "cart.css"],
             "js": ["cart.js"]
         }
     ]
